--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "author": "TexasTorque",
   "license": "MIT",
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/cors": "^2.8.13",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.65",
-    "typescript": "^4.8.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "firebase": "^9.21.0",
-    "firebase-admin": "^11.5.0"
+    "firebase": "^9.23.0",
+    "firebase-admin": "^11.10.1",
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "start": "node src/index.ts"
