--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "torque-task"
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
