--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    
+    "noImplicitAny": true,
   },
   "include": ["src", "types.ts"]
 }
