General app flow complete

--- a/src/config.json
+++ b/src/config.json
@@ -1,9 +1,9 @@
 {
-  "apiKey": "AIzaSyD0m8kmRpztS-I4HPtysNkSk9PMN6SAxTM",
-  "authDomain": "texas-torque-task.firebaseapp.com",
-  "projectId": "texas-torque-task",
-  "storageBucket": "texas-torque-task.appspot.com",
-  "messagingSenderId": "1019020558715",
-  "appId": "1:1019020558715:web:68671d1a49d10660bbfdde",
-  "measurementId": "G-JL97NNX1Z0"
+  "apiKey": "AIzaSyBxg_tzkZg9y_GJdq7DuOU5-NRI12UbD5M",
+  "authDomain": "cards-against-humanity-76d45.firebaseapp.com",
+  "projectId": "cards-against-humanity-76d45",
+  "storageBucket": "cards-against-humanity-76d45.appspot.com",
+  "messagingSenderId": "468637051485",
+  "appId": "1:468637051485:web:ae1e184b247ee02ff5bbb4",
+  "measurementId": "G-6G066019LS"
 }
