--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/frappe-gantt": "^0.6.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.65",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "frappe-gantt": "^0.6.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
-    "react-bootstrap-date-picker": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
@@ -48,5 +49,8 @@
   "engines": {
     "node": "16"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "sass": "^1.66.1"
+  }
 }
